# interoception

./: .gitignore  README.md  modal_app.py  pyproject.toml
analysis/: AUDIT_REPORT.md
analysis/data/: final_eval_stats.json  qwen25-3b-exp-s0.json  qwen25-3b-exp-s1.json  qwen25-3b-hyp-s0.json  qwen25-3b-hyp-s1.json  qwen3-4b-exp-s0.json  qwen3-4b-exp-s1.json  qwen3-4b-hyp-s0.json  qwen3-4b-hyp-s1.json
analysis/eval_rollouts/: phase1_qwen25_3b_exp_s0.jsonl  phase1_qwen25_3b_exp_s1.jsonl  phase1_qwen25_3b_hyp_s0.jsonl  phase1_qwen25_3b_hyp_s1.jsonl  phase2_qwen3_4b_exp_s0.jsonl  phase2_qwen3_4b_exp_s1.jsonl  phase2_qwen3_4b_hyp_s0.jsonl
configs/eval/: README.md
configs/rl/: ctrl0_qwen3_4b.toml  ctrl0_u1_40_long_qwen3_4b.toml  ctrl0_u1_40_qwen25_3b.toml  ctrl0_u1_40_qwen3_4b.toml  ctrlA_qwen3_4b.toml  ctrlB_qwen3_4b.toml  phase1_exp_s0.toml  phase1_exp_s1.toml  phase1_hyp_s0.toml  phase1_hyp_s1.toml  phase1_qwen25_3b_exp_s0.toml  phase1_qwen25_3b_exp_s1.toml  phase1_qwen25_3b_hyp_s0.toml  phase1_qwen25_3b_hyp_s1.toml  phase2_gemma4_e4b_exp_s0.toml  phase2_gemma4_e4b_exp_s1.toml  phase2_gemma4_e4b_hyp_s0.toml  phase2_gemma4_e4b_hyp_s1.toml  phase2_qwen3_4b_exp_s0.toml  phase2_qwen3_4b_exp_s1.toml  phase2_qwen3_4b_hyp_s0.toml  phase2_qwen3_4b_hyp_s1.toml  smoke.toml  train_qwen3_4b.toml  v2_qwen3_4b.toml
data/: eval.jsonl  train.jsonl
docs/: HANDOFF.md
environments/interoception_countdown/: README.md  __init__.py  _solver.py  interoception_countdown.py  pyproject.toml
runs/: q0_T30_s0.json
runs/env_repro_qwen3_4b_T30/: summary.csv
runs/eval_baseline_falcon7b/: p109_T30_s0.json  p109_T60_s0.json  p118_T30_s0.json  p118_T60_s0.json  p129_T30_s0.json  p129_T60_s0.json  p131_T30_s0.json  p131_T60_s0.json  p134_T30_s0.json  p134_T60_s0.json  p136_T30_s0.json  p136_T60_s0.json  p142_T30_s0.json  p142_T60_s0.json  p176_T30_s0.json  p176_T60_s0.json  (+85 more)
scripts/: build_dataset.py  compare_baselines.py  plot_rl.py  rl_train.py  run_one.py  run_sweep.py
(+822 files in other folders)
